2016-06-03  SilverNexus
	* search.c: Remove unecessary variable in parse_file().

2016-06-02  SilverNexus
	* fileperuser_search.c: Reduce the math required to return a value in fileperuser_memmem_boyer().
	* search.c: Increase severity of short read on non-mmap file load to ERROR and bail on that file.
	  Alter detection of next line in single match to use memchr().
	* main.c: Move search string length check up to reduce unnecessary processing when no search
	  string is supplied.
	* load_binary_file_cache.c: Begin to implement a binary file list that persists between executions.

2016-06-01  SilverNexus
	* parseArgs.c: Add arguments -b and --binary to toggle searching binary
	  files.
	* settings.h: Define search flag for binary files.
	* search.c: Add Functionality to test for binary files.
	  Optimize line counting to use memchr() instead of strchr().
	  Conditionally compile mmap file end fix only when we have mmap().
	  Move old check for null termination into new binary file detection;
	  optimize its new placement.
	* README: Updated usage to reflect new binary file search feature.
	* doc/fileperuser.man: Added usage information for new arguments.
	* test/search_test/test_search_results.sh: Added tests for new binary
	  files search option.
	* test/search_test/test_binary_*: Added new test results.
	* main.c: Fixed a bug that prevented the first character of needle from
	  being converted to lowercase on case-insensitive searches.

2016-05-30  SilverNexus
	* fileperuser_search.c: Remove fileperuser_memcasemem_brute().
	  Outperformed even on needle length of 2 by fileperuser_memcasemem_boyer().
	* fileperuser_search.h: Remove prototype for fileperuser_memcasemem_brute().
	* jump_table.h: Adjust minimum threshold for building a jump table on
	  case-insensitive searches down to 1.
	* search.c: Move the declaration of last char* into no_case branch.
	  Remove branch that called fileperuser_memcasemem_brute().